# gcp-kappa-pipeline

./: .dockerignore  .gitignore  main.py  pyproject.toml
backend/: main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
infra/: cloud_run.tf  firestore.tf  function.tf  iam.tf  outputs.tf  provider.tf  pubsub.tf  variables.tf
shared/: pyproject.toml
shared/src/shared/: __init__.py  schemas.py
