[project]
name = "gcp-kappa-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-pubsub>=2.37.0",
    "pydantic>=2.13.3",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = [
    "shared",
    "frontend",
    "backend"
]
