[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-firestore>=2.27.0",
    "pydantic>=2.13.3",
    "shared",
    "typing>=3.10.0.0",
]

[tool.uv.sources]
shared = { workspace=true }
